# nicegui-fe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  justfile  pyproject.toml  pytest.ini  realm-export.json  test_output.txt
.agent/rules/: python-run-tests.md
src/: main.py
tests/: conftest.py  test_integration.py  test_keycloak_integration.py  test_main.py
