[project]
name = "nicegui-project"
version = "0.1.0"
description = "Workspace for NiceGUI Frontend and FastAPI Service"
readme = "README.md"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
    "pytest-asyncio",
    "redis",
    "ruff",
    "testcontainers>=4.13.3",
    "ty",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "U"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
